# democv

./: CMakeLists.txt  main.cpp
.claude/: settings.local.json
src/: CMakeLists.txt  image_process.cpp  image_process.h
